--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "axios": "~0.18.0",
+    "axios": "^0.18.1",
     "body-parser": "~1.18.3",
     "dotenv": "~6.0.0",
-    "express": "~4.16.4"
+    "express": "~4.16.4",
+    "nan": "^2.14.0",
+    "vue": "^2.5.15",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "eslint": "~5.5.0",
