--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "~6.0.0",
     "express": "~4.16.4",
     "nan": "^2.14.0",
+    "scrollmonitor": "^1.2.0",
     "vue": "^2.5.15",
     "vue-resource": "^1.5.1"
   },
